apps/pihole/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: halo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pihole
          image: pihole/pihole:2026.09.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "512Mi"
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq-config-volume
            - mountPath: /etc/pihole
              name: pihole-config-volume
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: dnsmasq-config-volume
          persistentVolumeClaim:
            claimName: pihole-dnsmasq # Shared PVC for both volumes.
        - name: pihole-config-volume
          persistentVolumeClaim:
            claimName: pihole-config # Shared PVC for both volumes.
