apps/pihole/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: halo
  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /admin # Rewrite root 
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
    - host: pihole.halo.fabseit.net # Match the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole # Backend service name
                port:
                  number: 80 # Backend service port
  tls:
    - hosts:
        - pihole.halo.fabseit.net # TLS will apply to this host
      secretName: local-fabseit-net-prod-tls # Reference to the TLS secret
